kube/mysql-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-test
  name: mysql-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-test
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: mysql-test
    spec:
      containers:
        - args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          image: mysql:8.0
          name: mysql-test
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-test-claim0
      restartPolicy: Always
      volumes:
        - name: mysql-test-claim0
          persistentVolumeClaim:
            claimName: mysql-test-claim0
status: {}
